--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Сергей Галичев - веб-разработчик, фрилансер</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <title>Сергей Галичев - backend-разработчик</title>
+    <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400,700&display=swap" rel="stylesheet">
@@ -23,4 +23,5 @@
         </nav>
     </div>
 </body>
+
 </html>
