--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="navbar">
-        <img src="/images/logo.svg" alt="Logo" class="logo">
+        <img src="images/logo.svg" alt="Logo" class="logo">
         <nav class="navigation">
             <ul class="nav-list">
                 <li class="nav-item"><a href="#" class="nav-link active">Главная</a></li>
@@ -25,3 +25,4 @@
 </body>
 
 </html>
+
