--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Сергей Галичев - backend-разработчик</title>
+    <title>Сергей Галичев - веб-разработчик</title>
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400,700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="navbar">
+    <div class="navbar container">
         <img src="images/logo.svg" alt="Logo" class="logo">
         <nav class="navigation">
             <ul class="nav-list">
@@ -22,7 +23,45 @@
             </ul>
         </nav>
     </div>
+    <!-- ./navbar -->
+
+    <header class="header container">
+        <img src="images/avatar.png" alt="Сергей Галичев" class="header-photo">
+        <!-- /.header-photo -->
+
+        <div class="header-text">
+            <strong class="header-strong">Привет 👋</strong>
+             <h1 class="header-heading">
+                <span class="header-primary">Я фронтенд-разработчик и веб-дизайнер</span><br>
+                Меня зовут Сергей Галичев и я делаю сайты для людей и компаний
+            </h1>
+            <div class="header-links">
+                <ul class="social-list">
+                    <li class="social-item">
+                        <a href="" class="social-link"><img src="images/Icons/linkedin.svg" alt="linkedin" class="social-logo"></a>
+                    </li>
+                    <li class="social-item">
+                        <a href="" class="social-link"><img src="images/Icons/twitter.svg" alt="twitter" class="social-logo"></a>
+                    </li>
+                    <li class="social-item">
+                        <a href="" class="social-link"><img src="images/Icons/github.svg" alt="github" class="social-logo"></a>
+                    </li>
+                    <li class="social-item">
+                        <a href="" class="social-link"><img src="images/Icons/stackoverflow.svg" alt="stackoverflow" class="social-logo"></a>
+                    </li>
+                    <li class="social-item">
+                        <a href="" class="social-link"><img src="images/Icons/youtube.svg" alt="youtube" class="social-logo"></a>
+                    </li>
+                </ul>
+                <a href="#" class="cv-download" download>
+                    <img src="images/Icons/download.svg" alt="download-icon" class="cv-icon">
+                    <span class="cv-text">Скачать резюме</span>
+                </a>
+            </div>
+        </div>
+        <!-- /.header-text -->
+         
+    </header>
+    <!-- /.header -->
 </body>
-
 </html>
-
